# vkblam

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/: vkBlam.hpp
include/Blam/: Blam.hpp  Enums.hpp  Math.hpp  TagVisitor.hpp  Tags.hpp  Types.hpp  Util.hpp
include/Blam/Math/: Bounds3D.hpp  Vector.hpp
include/Blam/Types/: MapHeader.hpp  TagBlock.hpp  TagDataReferece.hpp  TagIndex.hpp  TagReference.hpp  Vertex.hpp
include/Blam/Util/: VirtualHeap.hpp
include/Common/: Alignment.hpp  Endian.hpp  Format.hpp  Literals.hpp
include/VkBlam/: Format.hpp  Renderer.hpp  Scene.hpp  SceneView.hpp  Shader.hpp  VkBlam.hpp  World.hpp
include/VkBlam/Shaders/: ShaderEnvironment.hpp
include/VkBlam/Tags/: TagImplementation.hpp  TagImplementations.hpp  TagPool.hpp
include/VkBlam/Tags/Implementations/: Bitmap.hpp
include/Vulkan/: Debug.hpp  DescriptorHeap.hpp  DescriptorUpdateBatch.hpp  Memory.hpp  Pipeline.hpp  QueryPool.hpp  SamplerCache.hpp  ShaderModuleCache.hpp  StreamBuffer.hpp  VulkanAPI.hpp
shaders/: Debug.frag  Debug.vert  Default.frag  Default.vert  Unlit.frag  vkBlam.glsl
source/: DebugShader.hpp  decrypt-shader.cpp  dump-bsp.cpp  main.cpp
source/Blam/: Blam.cpp  TagVisitor.cpp  Util.cpp
source/Common/: Format.cpp
source/VkBlam/: Format.cpp  FormatTraits.hpp  Renderer.cpp  Scene.cpp  SceneView.cpp  Shader.cpp  VkBlam.cpp  World.cpp
source/VkBlam/Shaders/: ShaderEnvironment.cpp
source/VkBlam/Tags/: TagImplementation.cpp  TagPool.cpp
source/VkBlam/Tags/Implementations/: Bitmap.cpp
source/Vulkan/: Debug.cpp  DescriptorHeap.cpp  DescriptorUpdateBatch.cpp  Memory.cpp  Pipeline.cpp  QueryPool.cpp  SamplerCache.cpp  ShaderModuleCache.cpp  StreamBuffer.cpp  VulkanAPI.cpp
